# aplus-ai-tmp

./: .gitignore  README.md  appraiser.md  dockerfile  pyproject.toml  requirements.txt  teacher.md
log/: appraiser.md  image_reader.md  teacher.md
res/: inputs.yaml  template.yaml
res/2020/f1/nj/estrada_reta/: dicas.md  input.yaml
res/2020/f1/ta/n1/cobrindo_o_tabuleiro/: info.txt  inputs.yaml
res/2020/f1/ta/n1/dona_minhoca_1/: info.txt  inputs.yaml
res/2020/f1/ta/n1/dona_minhoca_2/: info.txt  inputs.yaml
res/2020/f1/ta/n1/dona_minhoca_3/: info.txt  inputs.yaml
res/2020/f1/ta/n1/dona_minhoca_4/: dicas.md  info.txt  inputs.yaml
res/2020/f1/ta/n1/estrada_reta/: info.txt  inputs.yaml
res/2020/f1/ta/n1/novas_estradas_1/: info.txt  inputs.yaml
res/2020/f1/ta/n1/novas_estradas_2/: info.txt  inputs.yaml
res/2020/f1/ta/n1/paciente_zero_1/: info.txt  inputs.yaml
res/2020/f1/ta/n1/paciente_zero_2/: info.txt  inputs.yaml
res/2020/f1/ta/n1/seguranca_de_museu/: info.txt  inputs.yaml
res/2020/f1/ta/n1/show_de_talentos_1/: dicas.md  inputs.yaml
res/2020/f1/ta/n1/show_de_talentos_2/: inputs.yaml
res/2020/f1/ta/n1/show_de_talentos_3/: inputs.yaml
res/2020/f1/ta/n1/show_de_talentos_4/: inputs.yaml
res/Desafio 1/: nivel_1.txt  nivel_2.txt  nivel_junior.txt
res/Desafio 2/: nivel_1.txt  nivel_junior.txt
src/crew_test/: main.py
src/crew_test/appraiser/: agents.yaml  crew.py  tasks.yaml
src/crew_test/image_reader/: agents.yaml  crew.py  tasks.yaml
src/crew_test/teacher/: agents.yaml  crew.py  tasks.yaml
src/crew_test/tools/: vision_tool.py
(+57 files in other folders)
